dokuwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokuwiki
  namespace: dokuwiki
spec:
  selector:
    app: dokuwiki
  ports:
    - name: http
      port: 80
      targetPort: 80
